crates/analyzer/tests/snapshots/errors__unsafe_nesting.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: unnecessary `unsafe` block
  ┌─ compile_errors/unsafe_nesting.fe:2:5
  │
2 │     unsafe { g() }
  │     ^^^^^^^^^^^^^^ this `unsafe` block is nested inside another `unsafe` context

error: unnecessary `unsafe` block
  ┌─ compile_errors/unsafe_nesting.fe:8:9
  │
8 │         unsafe { h() }
  │         ^^^^^^^^^^^^^^ this `unsafe` block is nested inside another `unsafe` context


